--- a/html/historie.html
+++ b/html/historie.html
@@ -15,7 +15,7 @@
     <header class="jumbotron-fluid bg-success">
       <h1 class="text-white display-3 text-center p-4">Bolívie</h1>
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html"
+        <a class="navbar-brand" href="../index.html"
           ><img
             src="../img/vlajka_bolivie.jpg"
             alt="Vlajka Bolívie"
@@ -36,7 +36,7 @@
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
 
-              <a class="nav-link" href="index.html">Úvodní stránka</a>
+              <a class="nav-link" href="../index.html">Úvodní stránka</a>
               
             </li>
                   <li class="nav-link dropdown-toggle text-white"
@@ -45,7 +45,7 @@
                   aria-haspopup="true"
                   aria-expanded="false" href="#">Historie</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownUvod">
-                    <a class="dropdown-item" href="index.html">Historie1</a>
+                    <a class="dropdown-item" href="#">Historie1</a>
                     <a class="dropdown-item" href="#point">Historie2</a>
                   </div>
               
