-Rozšíření historické stránky

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p><b>Bolívie</b>, plným názvem <b>Mnohonárodnostní stát Bolívie</b> je vnitrozemský stát Jižní Ameriky.
          Na západě hraničí s Peru a Chile, na jihu s Argentinou, na jihovýchodě s Paraguayí a na východě a severu pak s Brazílií. 
          Své jméno má po prvním prezidentu <a href="https://cs.wikipedia.org/wiki/Sim%C3%B3n_Bol%C3%ADvar" target="blank">Simónu Bolívarovi</a>.</p>
-         <img src="img/bolivie_mapa.png" alt="">
+         <img src="img/bolivie_mapa.png" alt="Lokace Bolívie">
         </div>
          
         <div class="col">
