--- a/html/historie.html
+++ b/html/historie.html
@@ -63,10 +63,10 @@
     </header>
     <div class="container mt-3 mb-5">
     <main>
-      <h2 class="text-center bg-success mb-5">Historie</h2>
-      <div class="row">
+      <h2 class="text-center bg-success">Historie</h2>
+        <div class="row">
         <div class="col-12 mb-3">
-          <h2 class="text-center bg-success">Významné postavy</h2>
+          <h2 class="text-center bg-success">Významné postavy Bolívie</h2>
         </div>
       </div>
       <div class="row mb-4" id="postavy">
@@ -93,6 +93,72 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="row">
+      <div class="col-12 mb-3">
+        <h2 class="text-center bg-success">Historický přehled</h2>
+      </div>
+      </div>
+      <div class="row mb-4">
+        <div class="container">
+          <div class="border">
+        <h3 class="text-white">Předkolumbovská Bolívie </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
+           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
+           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+           <div class="row">
+             <div class="col"><img src="../img/h_img/chullpas.jpg" alt="Lokace Bolívie" style="height: 225px;"></div>
+             <div class="col"><img src="../img/h_img/gate.jpg" alt="Lokace Bolívie" style="height: 225px;"></div>
+           </div>
+          </div>
+          <div class="border">
+           <h3 class="text-white">1532 - 1809</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
+           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
+           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+           <div class="row">
+            <div class="col"><img src="../img/h_img/cajamarca.jfif" alt="Lokace Bolívie" style="height: 225px;"></div>
+            <div class="col"><img src="../img/h_img/pizarro.png" alt="Lokace Bolívie" style="height: 225px;"></div>
+          </div>
+           </div>
+           <div class="border">
+           <h3 class="text-white">1909 - 1920</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
+           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
+           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+           <div class="row">
+            <div class="col"><img src="../img/h_img/battle.jpg" alt="Lokace Bolívie"></div>
+          </div>
+           </div>
+           <div class="border">
+           <h3 class="text-white">1920 - 1964</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
+           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
+           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+           <div class="row">
+            <div class="col"><img src="../img/h_img/gun.jpg" alt="Lokace Bolívie"></div>
+          </div>
+           </div>
+           <div class="border">
+           <h3 class="text-white">1964 - 1982</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
+           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
+           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+           <div class="row">
+            <div class="col"><img src="../img/h_img/ovando.jpg" alt="Lokace Bolívie"></div>
+          </div>
+           </div>
+           <div class="border">
+           <h3 class="text-white">1982 - Současnost</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
+           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
+           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+           <div class="row">
+            <div class="col"><img src="../img/h_img/zuazo.jpg" alt="Lokace Bolívie" style="height: 250px;"></div>
+            <div class="col"><img src="../img/h_img/morales.jpg" alt="Lokace Bolívie" style="height: 250px;"></div>
+          </div>
+           </div>
+          </div>
       </div>
     </div>
   </main>
