--- a/html/historie.html
+++ b/html/historie.html
@@ -45,8 +45,8 @@
                   aria-haspopup="true"
                   aria-expanded="false" href="#">Historie</a>
                   <div class="dropdown-menu" aria-labelledby="dropdownUvod">
-                    <a class="dropdown-item" href="#">Historie1</a>
-                    <a class="dropdown-item" href="#point">Historie2</a>
+                    <a class="dropdown-item" href="#heroes">Významné postavy Bolívie</a>
+                    <a class="dropdown-item" href="#history">Historický přehled</a>
                   </div>
               
             </li>
@@ -66,7 +66,7 @@
       <h2 class="text-center bg-success">Historie</h2>
         <div class="row">
         <div class="col-12 mb-3">
-          <h2 class="text-center bg-success">Významné postavy Bolívie</h2>
+          <h2 class="text-center bg-success" id="heroes">Významné postavy Bolívie</h2>
         </div>
       </div>
       <div class="row mb-4" id="postavy">
@@ -96,66 +96,83 @@
       </div>
       <div class="row">
       <div class="col-12 mb-3">
-        <h2 class="text-center bg-success">Historický přehled</h2>
+        <h2 class="text-center bg-success" id="history">Historický přehled</h2>
       </div>
       </div>
       <div class="row mb-4">
         <div class="container">
           <div class="border">
         <h3 class="text-white">Předkolumbovská Bolívie </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
-           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
-           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+        <p>Předkolumbovská Bolívie pokrývá historické období mezi 10 000 př. N. L., Kdy byla poprvé osídlena oblast horních
+           And a 1532, kdy španělští dobyvatelé napadli říši Inků. Andské oblasti předkolumbovské Jižní Ameriky dominovala civilizace Tiwanaku až do 
+           roku 1200, kdy se regionální království Aymary stala nejmocnější z etnických skupin žijících v hustě osídlené oblasti obklopující jezero Titicaca. 
+           Mocenské boje pokračovaly až do roku 1450, kdy Inkové začlenili horní Bolívii do své rostoucí říše. Inkové se sídlem v dnešním Peru zavedli zemědělské a těžební postupy, 
+           které konkurovaly těm, které zavedly o mnoho let později evropští dobyvatelé. Rovněž založili silnou vojenskou sílu a centralizovali politickou moc. Přes své nejlepší úsilí 
+           však Inkové nikdy zcela neovládli nomádské kmeny bolivijské nížiny, ani plně asimilovali království Aymara do své společnosti. Když dorazili evropští dobyvatelé, tyto vnitřní 
+           divize odsoudily Incké impérium.</p>
            <div class="row">
-             <div class="col"><img src="../img/h_img/chullpas.jpg" alt="Lokace Bolívie" style="height: 225px;"></div>
-             <div class="col"><img src="../img/h_img/gate.jpg" alt="Lokace Bolívie" style="height: 225px;"></div>
+             <div class="col"><img src="../img/h_img/chullpas.jpg" alt="Lokace Bolívie" style="height: 225px;"><i>Chullpa je starobylá aymarská pohřební věž původně postavená pro vznešenou osobu.</i></div>
            </div>
           </div>
           <div class="border">
            <h3 class="text-white">1532 - 1809</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
-           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
-           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+        <p>Francisco Pizarro a jeho kolegové dobyvatelé z rychle rostoucí španělské říše poprvé přijeli do Nového světa v roce 1524. 
+          Pizarro se těšil ohromujícím úspěchům ve svém vojenském tažení proti Inkům, kteří byli i přes určitý odpor poraženi a v roce 1538 Španělé zcela porazili incké síly poblíž jezera Titicaca, což umožnilo Španělům proniknutí do střední a jižní Bolívie.
+          Přestože domorodý odpor několik let pokračoval, španělští dobyvatelé se tlačili kupředu a založili města La Paz v roce 1549 a Santa Cruz de la Sierra v roce 1561. V oblasti známé jako Horní Peru našli Španělé minerální pokladnici, kterou hledali - Potosí mělo 
+          největší koncentraci stříbra v západním světě. Na svém vrcholu v 16. století mělo Potosí více než 150 000 obyvatel, což z něj dělalo největší městské centrum na světě. V 70. letech 15. století představil místokrál Francisco de Toledo donucovací formu práce, <a href="https://cs.wikipedia.org/wiki/Mita" target="blank"><i>mita</i></a>, která vyžadovala,
+           aby domorodí muži z horských oblastí utráceli každý šestý rok prací v dolech. Mita spolu s technologickým pokrokem v rafinaci způsobily, že těžba v Potosí vzkvétala.</p>
            <div class="row">
-            <div class="col"><img src="../img/h_img/cajamarca.jfif" alt="Lokace Bolívie" style="height: 225px;"></div>
-            <div class="col"><img src="../img/h_img/pizarro.png" alt="Lokace Bolívie" style="height: 225px;"></div>
+            <div class="col"><img src="../img/h_img/cajamarca.jfif" alt="Lokace Bolívie" style="height: 225px;"><i>Bitva o Cajamarca</i></div>
           </div>
            </div>
            <div class="border">
            <h3 class="text-white">1909 - 1920</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
-           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
-           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+        <p>Invaze na Pyrenejský poloostrov v letech 1807-08 ze strany sil Napoleona Bonaparteho se ukázala být rozhodující pro boj za nezávislost v Jižní Americe, během něhož místní
+           elity Horního Peru zůstaly většinou loajální Španělsku a podporovaly vládu Junta Central, vládnoucí v jméno svrženého španělského krále Ferdinanda VII. Řada radikálních criollos
+            v letech 1808-10 zahájila místní boj o moc. Pedro Domingo Murillo vyhlásil nezávislý stát v Horním Peru jménem krále Ferdinanda VII. Během následujících sedmi let
+           se Horní Peru stalo bitevním polem mezi ozbrojenými silami nezávislých sjednocených provincií Rio de la Plata a monarchistickými jednotkami z Viceroyalty Peru.</p>
+           <p>Po roce 1820 podporovali criollos, kteří vytvořili konzervativní stranu, generála Pedra Antonia de Olañeta. Během liberální revoluce ve Španělsku v letech 1820–1823 Olañeta, 
+             přesvědčená o tom, že revoluce ohrožuje tradiční královskou autoritu, odmítla vstoupit do monarchistických sil nebo povstaleckých armád pod vedením Simóna Bolívara a Antonia Josého
+              de Sucreho. Olañeta se nevzdal svého velení ani poté, co ho a jeho síly peruánští monarchisté zahrnuli do kapitulační dohody po jejich porážce v bitvě u Ayacucha v roce 1824,
+              poslední bitvě válek za nezávislost v Latinské Americe. Olañeta pokračoval ve svém odporu, dokud nebyl 2. dubna 1825 zabit svými vlastními muži.</p>
            <div class="row">
-            <div class="col"><img src="../img/h_img/battle.jpg" alt="Lokace Bolívie"></div>
+            <div class="col"><img src="../img/h_img/battle.jpg" alt="Lokace Bolívie"><i>Bitva o Ayacucho byla poslední bitvou válek za nezávislost v Latinské Americe.</i></div>
           </div>
            </div>
            <div class="border">
            <h3 class="text-white">1920 - 1964</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
-           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
-           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+        <p>Bolívijská porážka Paraguayem ve válce Chaco v letech 1932–1936 znamenala zlom v moderní historii Bolívie. Velké ztráty na životech a území zdiskreditovaly tradiční vládnoucí
+           třídy, zatímco služba v armádě vyvolala mezi domorodými obyvateli rozruch politického povědomí. Velká část napadeného regionu Gran Chaco byla předána Paraguayi. Na oplátku byl 
+           Bolívii umožněn přístup k řece Paraguay, kde byl založen Puerto Busch, a díky tomu byl možný volný přístup do Atlantského oceánu přes mezinárodní vody. V roce 1936 byly znárodněny 
+           bolivijské operace Standard Oil a byla vytvořena státní firma Yacimientos Petroliferos Fiscales Bolivianos (YPFB).
+           Od konce války v Chaco až do bolivijské národní revoluce v roce 1952, bolivijská politika vyvolala vznik soupeřících ideologií a požadavky nových skupin.</p>
+           <p>Během druhé světové války a korejské války se bolivijský cín těšil vysoké poptávce a cenám. I když kvalita rud klesla, USA vybudovaly huť schopnou zvládnout bolivijské rudy nízké
+              kvality a pokračovaly v nákupu bolivijského cínu. Po znárodnění dolů, po skončení korejské války, klesly ceny cínu a USA již cín nepotřebovaly 
+             k podpoře válečného úsilí. Navíc, když byly doly znárodněny, zahraniční těžební inženýři a manažeři opustili zemi a zanechali v dolech nedostatek kvalifikovaných náhrad.</p>
            <div class="row">
-            <div class="col"><img src="../img/h_img/gun.jpg" alt="Lokace Bolívie"></div>
+            <div class="col"><img src="../img/h_img/gun.jpg" alt="Lokace Bolívie"><i>Vojácí Paraguay ve válce o Chaco</i></div>
           </div>
            </div>
            <div class="border">
            <h3 class="text-white">1964 - 1982</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
-           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
-           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+        <p>Dějiny Bolívie od roku 1964 do roku 1982 jsou obdobím nestability různých vojenských diktátorů. 4. listopadu 1964 přešla moc od zvoleného vůdce bolivijské národní revoluce Víctor
+           Paz Estenssoro k vojenské juntě pod populárním místopředsedou generálem René Barrientosem. Barrientos byl zvolen prezidentem v roce 1966, ale podezřele zemřel při havárii vrtulníku 
+           v roce 1969 při prohlídce krajiny při návštěvě domorodých obyvatel Bolívie, což vedlo k převratu v září 1969 generálem Ovandem, kterého v říjnu 1970 svrhl generál Rogelio Miranda, 
+           který byl o několik dní později svržen generálem JJTorresem, který byl v srpnu 1971 svržen Hugem Banzerem Suárezem. Banzer vládl sedm let, původně od roku 1971 do roku 1974 s podporou 
+           Estenssoroova nacionalistického revolučního hnutí. V roce 1974, netrpělivý na rozkoly ve straně, nahradil civilisty členy ozbrojených sil a pozastavil politické aktivity. Ekonomika 
+           působila během Banzerova prezidentství působivě, ale jeho podporu podkopaly požadavky na větší politickou svobodu. Vyhlásil volby v roce 1978 a Bolívie se opět vrhla do zmatku. 
+           Juan Pereda vládl v roce 1978 pouhé čtyři měsíce, ale jeho nástup k prezidentskému úřadu znamenal začátek ještě nestabilnějšího období bolivijské historie,
+           kdy za necelé čtyři roky (1978–1982) bylo devět civilních a vojenských prezidentů. Rok 1982 znamenal návrat k demokraticky zvolené vládě, prezidentem byl Guido Vildoso.</p>
            <div class="row">
-            <div class="col"><img src="../img/h_img/ovando.jpg" alt="Lokace Bolívie"></div>
+            <div class="col"><img src="../img/h_img/ovando.jpg" alt="Lokace Bolívie"><i>Generál Alfredo Ovando Candía</i></div>
           </div>
            </div>
            <div class="border">
            <h3 class="text-white">1982 - Současnost</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id eleifend mi. Suspendisse potenti. Donec vehicula turpis justo, accumsan vestibulum mauris pharetra id.
-           Aliquam tellus neque, aliquam vitae posuere non, volutpat id metus. Sed rhoncus lorem vel dui faucibus sodales.
-           Maecenas dictum augue sit amet nisi suscipit, ac vulputate sapien dignissim. Fusce malesuada, urna ut facilisis placerat, dui odio maximus.</p>
+        <p>Historie Bolívie od roku 1982 začíná obnovou demokracie prezidentem Evo Morales  (2006 - 2019), po vládě vojenské junty v roce 1982. Nová ústava byla přijata v roce 2009.
+           Počet obyvatel Bolívie se v tomto období zhruba zdvojnásobil, od 5 milionů v roce 1980 na 10 milionů od roku 2012.</p>
            <div class="row">
-            <div class="col"><img src="../img/h_img/zuazo.jpg" alt="Lokace Bolívie" style="height: 250px;"></div>
-            <div class="col"><img src="../img/h_img/morales.jpg" alt="Lokace Bolívie" style="height: 250px;"></div>
+            <div class="col"><img src="../img/h_img/morales.jpg" alt="Lokace Bolívie" style="height: 250px;"><i>Bývalý prezident Evo Morales</i></div>
           </div>
            </div>
           </div>
