Další blok s informacemi

--- a/html/historie.html
+++ b/html/historie.html
@@ -47,6 +47,7 @@
                   <div class="dropdown-menu" aria-labelledby="dropdownUvod">
                     <a class="dropdown-item" href="#heroes">Významné postavy Bolívie</a>
                     <a class="dropdown-item" href="#history">Historický přehled</a>
+                    <a class="dropdown-item" href="#important">Významné historické události</a>
                   </div>
               
             </li>
@@ -177,6 +178,28 @@
            </div>
           </div>
       </div>
+
+      <div class="row">
+      <div class="col-12 mb-3">
+      <h2 class="text-center bg-success" id="important">Významné historické události</h2>
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="container">
+          <div class="col-12" id="udalosti">
+            <table class="table table-striped table-inverse">
+              <thead class="thead-inverse">
+                <tr>
+                  <th>Letopočet</th>
+                  <th>Událost</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+          </div>
+          </div>
+        </div>
     </div>
   </main>
   <footer class="container-fluid bg-success text-white">Adam Hajdík IT2 &COPY;2021</footer>
@@ -191,5 +214,4 @@
   </script>
   <script src="../js/historie.js"></script>
 </body>
-
 </html>
