--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="html/historie.html">Historie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Geografie</a>
+              <a class="nav-link" href="html/geografie.html">Geografie</a>
             </li>
           </ul> 
         </div>
