--- a/public/html/geografie.html
+++ b/public/html/geografie.html
@@ -50,7 +50,6 @@
     <div class="container mt-3 mb-5">
     <main>
     
-
         <div class="row">
             <div class="col-12 mb-3">
               <h2 class="text-center bg-success">Mapa Bolívie</h2>
@@ -63,7 +62,7 @@
   <svg
      baseprofile="tiny"
      fill="#7c7c7c"
-     height="600"
+     height="700"
      stroke="#ffffff"
      stroke-linecap="round"
      stroke-linejoin="round"
@@ -257,9 +256,9 @@
            </div>
            <div class="card-body">
              <p class="card-text">Klikněte na departement <i class="fas fa-circle"></i> nebo město <i class="fas fa-square-full"></i> pro více informací.</p>
+             <p class="card-pic"></p>
            </div>
          </div>
-         <div class="row gallery">
          </div>
        </div>
      </div>
