Pridani casu + popisek u obrazku

--- a/public/html/geografie.html
+++ b/public/html/geografie.html
@@ -44,6 +44,9 @@
               <a class="nav-link text-white" href="geografie.html">Geografie</a>
             </li>
           </ul> 
+          <i class="far fa-clock mr-2"></i>
+          <div class="time">Aktuální čas v Bolívii:</div>
+          <div id="clock"></div>
         </div>
       </nav>
     </header>
