--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="https://kit.fontawesome.com/de0e4c4cca.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"/>
@@ -57,6 +57,9 @@
               <a class="nav-link" href="html/geografie.html">Geografie</a>
             </li>
           </ul> 
+          <i class="far fa-clock mr-2"></i>
+          <div class="time">Aktuální čas v Bolívii:</div>
+          <div id="clock"></div>
         </div>
       </nav>
     </header>
@@ -104,7 +107,6 @@
           </table>
         </div>
         </div>
-
     <h2 class="bg-success text-center" id="politics">Politický systém</h2>
       <div class="row">
         <div class="col">
