--- a/public/html/historie.html
+++ b/public/html/historie.html
@@ -5,13 +5,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <script src="https://kit.fontawesome.com/de0e4c4cca.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css"/>
   </head>
-  <body>
-      
+  <body>     
     <header class="jumbotron-fluid bg-success">
       <h1 class="text-white display-3 text-center p-4">Bolívie</h1>
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -54,6 +53,9 @@
               <a class="nav-link" href="geografie.html">Geografie</a>
             </li>
           </ul> 
+          <i class="far fa-clock mr-2"></i>
+          <div class="time">Aktuální čas v Bolívii:</div>
+          <div id="clock"></div>
         </div>
       </nav>
     </header>
@@ -107,7 +109,7 @@
            však Inkové nikdy zcela neovládli nomádské kmeny bolivijské nížiny, ani plně asimilovali království Aymara do své společnosti. Když dorazili evropští dobyvatelé, tyto vnitřní 
            divize odsoudily Incké impérium.</p>
            <div class="row">
-             <div class="col"><img src="images/chullpas.jpg" alt="Chullpa" style="height: 225px;"><i>Chullpa je starobylá aymarská pohřební věž původně postavená pro vznešenou osobu.</i></div>
+             <div class="col"><img src="images/chullpas.jpg" alt="Chullpa" style="height: 225px;" data-toggle="popover" data-container="body" data-content="Chullpa je starobylá aymarská pohřební věž původně postavená pro vznešenou osobu." class="imgP"></div>
            </div>
           </div>
           <div class="border">
@@ -118,7 +120,7 @@
           největší koncentraci stříbra v západním světě. Na svém vrcholu v 16. století mělo Potosí více než 150 000 obyvatel, což z něj dělalo největší městské centrum na světě. V 70. letech 15. století představil místokrál Francisco de Toledo donucovací formu práce, <a href="https://cs.wikipedia.org/wiki/Mita" target="blank"><i>mita</i></a>, která vyžadovala,
            aby domorodí muži z horských oblastí utráceli každý šestý rok prací v dolech. Mita spolu s technologickým pokrokem v rafinaci způsobily, že těžba v Potosí vzkvétala.</p>
            <div class="row">
-            <div class="col"><img src="images/cajamarca.jfif" alt="Bitva o Cajamarca" style="height: 225px;"><i>Bitva o Cajamarca</i></div>
+            <div class="col"><img src="images/cajamarca.jfif" alt="Bitva o Cajamarca" style="height: 225px;" data-container="body" data-content="Bitva o Cajamarca" class="imgP"></div>
           </div>
            </div>
            <div class="border">
@@ -132,7 +134,7 @@
               de Sucreho. Olañeta se nevzdal svého velení ani poté, co ho a jeho síly peruánští monarchisté zahrnuli do kapitulační dohody po jejich porážce v bitvě u Ayacucha v roce 1824,
               poslední bitvě válek za nezávislost v Latinské Americe. Olañeta pokračoval ve svém odporu, dokud nebyl 2. dubna 1825 zabit svými vlastními muži.</p>
            <div class="row">
-            <div class="col"><img src="images/battle.jpg" alt="Bitva o Ayacucho"><i>Bitva o Ayacucho byla poslední bitvou válek za nezávislost v Latinské Americe.</i></div>
+            <div class="col"><img src="images/battle.jpg" alt="Bitva o Ayacucho" data-container="body" data-content="Bitva o Ayacucho byla poslední bitvou válek za nezávislost v Latinské Americe." class="imgP"></div>
           </div>
            </div>
            <div class="border">
@@ -146,7 +148,7 @@
               kvality a pokračovaly v nákupu bolivijského cínu. Po znárodnění dolů, po skončení korejské války, klesly ceny cínu a USA již cín nepotřebovaly 
              k podpoře válečného úsilí. Navíc, když byly doly znárodněny, zahraniční těžební inženýři a manažeři opustili zemi a zanechali v dolech nedostatek kvalifikovaných náhrad.</p>
            <div class="row">
-            <div class="col"><img src="images/gun.jpg" alt="Vojácí Paraguay"><i>Vojácí Paraguay ve válce o Chaco</i></div>
+            <div class="col"><img src="images/gun.jpg" alt="Vojácí Paraguay" data-container="body" data-content="Vojácí Paraguay ve válce o Chaco" class="imgP"></div>
           </div>
            </div>
            <div class="border">
@@ -160,7 +162,7 @@
            Juan Pereda vládl v roce 1978 pouhé čtyři měsíce, ale jeho nástup k prezidentskému úřadu znamenal začátek ještě nestabilnějšího období bolivijské historie,
            kdy za necelé čtyři roky (1978–1982) bylo devět civilních a vojenských prezidentů. Rok 1982 znamenal návrat k demokraticky zvolené vládě, prezidentem byl Guido Vildoso.</p>
            <div class="row">
-            <div class="col"><img src="images/ovando.jpg" alt="Alfredo Ovando Candía"><i>Generál Alfredo Ovando Candía</i></div>
+            <div class="col"><img src="images/ovando.jpg" alt="Alfredo Ovando Candía" data-container="body" data-content="Generál Alfredo Ovando Candía" class="imgP"></div>
           </div>
            </div>
            <div class="border">
@@ -168,12 +170,11 @@
         <p>Historie Bolívie od roku 1982 začíná obnovou demokracie prezidentem Evo Morales  (2006 - 2019), po vládě vojenské junty v roce 1982. Nová ústava byla přijata v roce 2009.
            Počet obyvatel Bolívie se v tomto období zhruba zdvojnásobil, od 5 milionů v roce 1980 na 10 milionů od roku 2012.</p>
            <div class="row">
-            <div class="col"><img src="images/morales.jpg" alt="Evo Morales" style="height: 250px;"><i>Bývalý prezident Evo Morales</i></div>
+            <div class="col"><img src="images/morales.jpg" alt="Evo Morales" style="height: 250px;" data-container="body" data-content="Bývalý prezident Evo Morales" class="imgP"></div>
           </div>
            </div>
           </div>
       </div>
-
       <div class="row">
       <div class="col-12 mb-3">
       <h2 class="text-center bg-success" id="important">Významné historické události</h2>
